--- a/Neighborhood_Toronto.ipynb
+++ b/Neighborhood_Toronto.ipynb
@@ -1153,7 +1153,7 @@
     }
    ],
    "source": [
-    "# @hidden_cell\n",
+    "@hidden_cell\n",
     "# Credentials for Foursquare API\n",
     "\n",
     "CLIENT_ID = 'VZUTPY2FOKIONCNBNMKIAMBON14B5VVEJPEHMO10343YTRWE' # your Foursquare ID\n",
