--- a/Neighborhood_Toronto.ipynb
+++ b/Neighborhood_Toronto.ipynb
@@ -1156,8 +1156,8 @@
     "@hidden_cell\n",
     "# Credentials for Foursquare API\n",
     "\n",
-    "CLIENT_ID = 'VZUTPY2FOKIONCNBNMKIAMBON14B5VVEJPEHMO10343YTRWE' # your Foursquare ID\n",
-    "CLIENT_SECRET = '25E23UHN0YD4F1GDHQWD0104WT4Z5R3D0TMDWTV23AOGITFL' # your Foursquare Secret\n",
+    "CLIENT_ID = 'XXXXXX' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'XXXXXX' # your Foursquare Secret\n",
     "VERSION = '20210628' # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value\n",
     "\n",
